--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="Arendelle.js"></script>
   <script src="./Jison/LexParse.js"></script>
   <script type="text/javascript">
-    var AST = exec("r");
+    var AST = exec("rp dup");
     var res = AST.exec(0);
     console.log("And the compiled JS: ");
     console.log(res);
