--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <script src="Arendelle.js"></script>
   <script src="./Jison/LexParse.js"></script>
   <script type="text/javascript">
-    var AST = exec("r 1+3");
-    var res = AST.exec(0);
+    var AST = exec("(space,1)");
+    var arendelle = {context:"main", nodeNo:1};
+    var res = AST.exec(arendelle);
     console.log("And the compiled JS: ");
     console.log(res);
   </script>
